@@ -4,20 +4,17 @@ use strict;
 use Async::Event::Interval;
 use Test::More;
 
-
 my @params = qw(1 2 3);
 
 my $event = Async::Event::Interval->new(
-    1,
+    0,
     \&callback_multi,
     @params
 );
 
 $event->start;
 
-sleep 1; # your app does other stuff here
-
-$event->stop;
+sleep 1;
 
 sub callback_multi {
     is $_[0], 1, "first param of array ok: 1";
