@@ -1,6 +1,8 @@
 Revision history for Fork-Event-Interval
 
 1.04 UNREL
+    - Fix issue in t/45-params.t where done_testing() may have been called
+      multiple times
     -
 
 1.03    2021-05-05
